--- a/META.yml
+++ b/META.yml
@@ -21,9 +21,10 @@ requires:
   Module::List: 0
   Perinci::Access::Base: 0
   Perinci::MetaAccessor::Default: 0
+  Perinci::Object: 0.11
   Perinci::Sub::Wrapper: 0.25
   Perinci::Util: 0
-  Riap: v1.1.14
+  Riap: v1.1.19
   Rinci: v1.1.27
   SHARYANTO::Package::Util: 0
   Tie::Cache: 0
@@ -32,4 +33,4 @@ requires:
 resources:
   homepage: http://metacpan.org/release/Perinci-Access-InProcess
   repository: http://github.com/sharyanto/perl-Perinci-Access-InProcess
-version: 0.32
+version: 0.33
