--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.32
+version=0.33
 
 name=Perinci-Access-InProcess
 author=Steven Haryanto <stevenharyanto@gmail.com>
@@ -20,13 +20,14 @@ Test::More=0.96
 ;!lint-prereqs assume-used # spec
 Rinci=1.1.27
 ;!lint-prereqs assume-used # spec
-Riap=1.1.14
+Riap=1.1.19
 
 perl=5.010001
 Class::Inspector=0
 Log::Any=0
 Module::List=0
 Perinci::Access::Base=0
+Perinci::Object=0.11
 Perinci::Sub::Wrapper=0.25
 ;!lint-prereqs assume-used # undetected by scan_prereqs, dynamic require
 Perinci::MetaAccessor::Default=0
