Import of SHARYANTO/Perinci-Access-InProcess-0.34 from CPAN.
gitpan-cpan-distribution: Perinci-Access-InProcess
gitpan-cpan-version:      0.34
gitpan-cpan-path:         SHARYANTO/Perinci-Access-InProcess-0.34.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -25,12 +25,13 @@ requires:
   Perinci::Sub::Wrapper: 0.25
   Perinci::Util: 0
   Riap: v1.1.19
-  Rinci: v1.1.27
+  Rinci: v1.1.28
   SHARYANTO::Package::Util: 0
   Tie::Cache: 0
   URI: 0
+  UUID::Random: 0
   perl: 5.010001
 resources:
   homepage: http://metacpan.org/release/Perinci-Access-InProcess
   repository: http://github.com/sharyanto/perl-Perinci-Access-InProcess
-version: 0.33
+version: 0.34
