Import of SHARYANTO/Perinci-Access-InProcess-0.36 from CPAN.
gitpan-cpan-distribution: Perinci-Access-InProcess
gitpan-cpan-version:      0.36
gitpan-cpan-path:         SHARYANTO/Perinci-Access-InProcess-0.36.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -24,8 +24,9 @@ requires:
   Perinci::Object: 0.11
   Perinci::Sub::Wrapper: 0.25
   Perinci::Util: 0
+  Progress::Any: 0
   Riap: v1.1.19
-  Rinci: v1.1.28
+  Rinci: v1.1.31
   SHARYANTO::Package::Util: 0
   Tie::Cache: 0
   URI: 0
@@ -34,4 +35,4 @@ requires:
 resources:
   homepage: http://metacpan.org/release/Perinci-Access-InProcess
   repository: http://github.com/sharyanto/perl-Perinci-Access-InProcess
-version: 0.35
+version: 0.36
