--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.43
+version=0.44
 
 name=Perinci-Access-InProcess
 author=Steven Haryanto <stevenharyanto@gmail.com>
@@ -30,6 +30,7 @@ Perinci::Access::Base=0.29
 Perinci::Object=0.11
 Perinci::Sub::Wrapper=0.34
 Progress::Any=0
+SHARYANTO::ModuleOrPrefix::Path=0
 SHARYANTO::Package::Util=0
 Tie::Cache=0
 URI=0
