--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.46
+version=0.47
 
 name=Perinci-Access-InProcess
 author=Steven Haryanto <stevenharyanto@gmail.com>
@@ -12,13 +12,14 @@ repository=http://github.com/sharyanto/perl-Perinci-Access-InProcess
 [@SHARYANTO]
 
 [Prereqs / TestRequires]
+File::Slurp=0
 ;!lint-prereqs assume-used # undetected by scan_prereqs, used via riap
 Perinci::Examples=0.08
 Test::More=0.96
 
 [Prereqs]
 ;!lint-prereqs assume-used # spec
-Rinci=1.1.31
+Rinci=1.1.36
 ;!lint-prereqs assume-used # spec
 Riap=1.1.19
 
@@ -28,7 +29,7 @@ Log::Any=0
 Module::List=0
 Perinci::Access::Base=0.29
 Perinci::Object=0.11
-Perinci::Sub::Wrapper=0.34
+Perinci::Sub::Wrapper=0.45
 Progress::Any=0
 SHARYANTO::ModuleOrPrefix::Path=0
 SHARYANTO::Package::Util=0
